reverted last merge with trunk
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/runtime_verification@9246 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c