@@ -25,18 +25,15 @@ package org.sosy_lab.cpachecker.util.invariants.templates;
 
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
 import org.sosy_lab.cpachecker.util.invariants.Rational;
 import org.sosy_lab.cpachecker.util.predicates.interfaces.Formula;
-import org.sosy_lab.cpachecker.util.predicates.interfaces.FormulaType;
-import org.sosy_lab.cpachecker.util.predicates.interfaces.basicimpl.AbstractFormulaList;
-import org.sosy_lab.cpachecker.util.predicates.interfaces.view.FormulaManagerView;
-import org.sosy_lab.cpachecker.util.predicates.interfaces.view.FunctionFormulaManagerView;
+import org.sosy_lab.cpachecker.util.predicates.interfaces.FormulaList;
+import org.sosy_lab.cpachecker.util.predicates.interfaces.FormulaManager;
 
-public class TemplateUIF extends TemplateNumericValue {
+public class TemplateUIF extends TemplateFormula {
 
   private String name = null;
   private TemplateSumList args = null;
@@ -47,17 +44,15 @@ public class TemplateUIF extends TemplateNumericValue {
 //------------------------------------------------------------------
 // Constructors
 
-  public TemplateUIF(String pName, FormulaType<?> returnValue, TemplateSumList pArgs) {
-    super(returnValue);
+  public TemplateUIF(String pName, TemplateSumList pArgs) {
     name = pName;
     args = pArgs;
   }
 
-  public TemplateUIF(String pName, FormulaType<?> returnValue, TemplateSumList pArgs, int pIdx) {
-    super(returnValue);
+  public TemplateUIF(String pName, TemplateSumList pArgs, int pIdx) {
     name = pName;
     args = pArgs;
-    index = Integer.valueOf(pIdx);
+    index = new Integer(pIdx);
   }
 
   //----------------------------------------------------------------
@@ -65,24 +60,18 @@ public class TemplateUIF extends TemplateNumericValue {
 
   @Override
   public TemplateUIF copy() {
-    return withFormulaType(getFormulaType());
-  }
-
-  @Override
-  public TemplateUIF withFormulaType(FormulaType<?> pNewType) {
-
     /*
     TemplateUIF u = null;
     if (index == null) {
-      u = new TemplateUIF(name, args.copy());
+      u = new TemplateUIF(name,args.copy());
     } else {
-      u = new TemplateUIF(name, args.copy(), index.intValue());
+      u = new TemplateUIF(name,args.copy(),index.intValue());
     }
     */
 
-    TemplateUIF u = new TemplateUIF(name, pNewType, args.copy());
+    TemplateUIF u = new TemplateUIF( new String(name), args.copy() );
     if (index != null) {
-      u.index = Integer.valueOf(index);
+      u.index = new Integer(index);
     }
     if (oldPurifiedName != null) {
       u.oldPurifiedName = oldPurifiedName.copy();
@@ -111,7 +100,7 @@ public class TemplateUIF extends TemplateNumericValue {
   }
 
   @Override
-  public boolean evaluate(Map<String, Rational> map) {
+  public boolean evaluate(Map<String,Rational> map) {
     boolean ans = true;
     if (args!=null) {
       ans &= args.evaluate(map);
@@ -127,14 +116,14 @@ public class TemplateUIF extends TemplateNumericValue {
   }
 
   @Override
-  public void postindex(Map<String, Integer> indices) {
+  public void postindex(Map<String,Integer> indices) {
     if (args!=null) {
       args.postindex(indices);
     }
   }
 
   @Override
-  public void preindex(Map<String, Integer> indices) {
+  public void preindex(Map<String,Integer> indices) {
     if (args!=null) {
       args.preindex(indices);
     }
@@ -181,17 +170,17 @@ public class TemplateUIF extends TemplateNumericValue {
 // Other cascade methods
 
   @Override
-  public Set<TemplateVariable> getAllVariables() {
-    HashSet<TemplateVariable> vars = new HashSet<>();
+  public Set<String> getAllVariables(VariableWriteMode vwm) {
+    HashSet<String> vars = new HashSet<String>();
     if (args != null) {
-      vars.addAll(args.getAllVariables());
+      vars.addAll(args.getAllVariables(vwm));
     }
     return vars;
   }
 
   @Override
   public Set<TemplateVariable> getAllParameters() {
-    HashSet<TemplateVariable> params = new HashSet<>();
+    HashSet<TemplateVariable> params = new HashSet<TemplateVariable>();
     if (args != null) {
       params.addAll(args.getAllParameters());
     }
@@ -199,7 +188,7 @@ public class TemplateUIF extends TemplateNumericValue {
   }
 
   @Override
-  public HashMap<String, Integer> getMaxIndices(HashMap<String, Integer> map) {
+  public HashMap<String,Integer> getMaxIndices(HashMap<String,Integer> map) {
     if (args!=null) {
       map = args.getMaxIndices(map);
     }
@@ -222,18 +211,15 @@ public class TemplateUIF extends TemplateNumericValue {
   }
 
   @Override
-  public Formula translate(FormulaManagerView fmgr) {
-    Formula form = null;
-    List<Formula> fl = ((AbstractFormulaList)args.translate(fmgr)).getTerms();
-    FunctionFormulaManagerView ffmgr = fmgr.getFunctionFormulaManager();
-    if (hasIndex()) {
-      form = ffmgr.createFuncAndCall(name, index.intValue(), getFormulaType(), fl);
-      //form = fmgr.makeUIF(name, fl, index.intValue());
-    } else {
-      form = ffmgr.createFuncAndCall(name, getFormulaType(), fl);
-      //form = fmgr.makeUIF(name, fl);
-    }
-    return form;
+  public Formula translate(FormulaManager fmgr) {
+  	Formula form = null;
+  	FormulaList fl = args.translate(fmgr);
+  	if (hasIndex()) {
+  		form = fmgr.makeUIF(name, fl, index.intValue());
+  	} else {
+  		form = fmgr.makeUIF(name, fl);
+  	}
+  	return form;
   }
 
 //------------------------------------------------------------------
@@ -248,7 +234,7 @@ public class TemplateUIF extends TemplateNumericValue {
   }
 
   public boolean hasIndex() {
-    return (index != null);
+  	return (index != null);
   }
 
   public Integer getIndex() {
